fix issue with slider gap

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -979,8 +979,8 @@ footer.footer {
   margin-left:-4px;
 }           
 
-@media (min-width: 1200px) and (max-width: 1920px) {
+@media only screen and (min-width: 1919px) {
   .image {
-    margin-left:-54px;
+    margin-left:-69px;
   }
 }
